--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Prophet Yusuf Quiz</title>
-        <link rel="stylesheet" href="styles.css">
-        </head>
-        <body>
+    <title>Islamic Quiz - Prophet Yusuf</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-          <!-- Welcome Page -->
-            <div id="welcomePage" class="page">
-                <h1>Welcome to the Prophet Yusuf Quiz</h1>
-                    <p>Select your difficulty level</p>
-                        <button onclick="startQuiz('easy')">Easy</button>
-                            <button onclick="startQuiz('medium')">Medium</button>
-                                <button onclick="startQuiz('hard')">Hard</button>
-                                  </div>
+    <!-- Welcome Screen -->
+    <div id="welcome-screen">
+        <h1>Welcome to the Prophet Yusuf Quiz</h1>
+        <button onclick="showLevelSelection()">Start Quiz</button>
+    </div>
 
-                                    <!-- Quiz Page -->
-                                      <div id="quizPage" class="page" style="display:none;">
-                                          <div id="progressBarContainer">
-                                                <div id="progressBar"></div>
-                                                    </div>
+    <!-- Level Selection Screen -->
+    <div id="level-screen" class="hidden">
+        <h2>Select Difficulty Level</h2>
+        <button onclick="startQuiz('easy')">Easy</button>
+        <button onclick="startQuiz('medium')">Medium</button>
+        <button onclick="startQuiz('hard')">Hard</button>
+    </div>
 
-                                                        <div id="questionContainer">
-                                                              <h2 id="questionText">Question</h2>
-                                                                    <div id="answerOptions">
-                                                                            <button onclick="checkAnswer(0)">Option 1</button>
-                                                                                    <button onclick="checkAnswer(1)">Option 2</button>
-                                                                                            <button onclick="checkAnswer(2)">Option 3</button>
-                                                                                                  </div>
-                                                                                                      </div>
+    <!-- Quiz Screen -->
+    <div id="quiz-screen" class="hidden">
+        <h2 id="question-number"></h2>
+        <p id="question-text"></p>
+        <div id="options-container"></div>
+        <p id="timer">Time Left: <span id="time-left">30</span> sec</p>
+        <button onclick="prevQuestion()">Previous</button>
+        <button onclick="nextQuestion()">Next</button>
+    </div>
 
-                                                                                                          <div id="timer">30</div>
-                                                                                                              <button id="nextButton" onclick="nextQuestion()" style="display:none;">Next Question</button>
-                                                                                                                </div>
+    <!-- Results Screen -->
+    <div id="results-screen" class="hidden">
+        <h2>Quiz Completed!</h2>
+        <p>Your Score: <span id="final-score"></span></p>
+        <p>Correct Answers:</p>
+        <div id="correct-answers"></div>
+        <button onclick="restartQuiz()">Restart Quiz</button>
+        <button onclick="goToMainMenu()">Main Menu</button>
+    </div>
 
-                                                                                                                  <!-- Result Page -->
-                                                                                                                    <div id="resultPage" class="page" style="display:none;">
-                                                                                                                        <h2>Your Score: <span id="score"></span>/20</h2>
-                                                                                                                            <div id="starRating" class="star-rating"></div>
-                                                                                                                                <button onclick="restartQuiz()">Restart Quiz</button>
-                                                                                                                                    <button onclick="returnToMenu()">Return to Main Menu</button>
-                                                                                                                                      </div>
-
-                                                                                                                                        <script src="scripts.js"></script>
-                                                                                                                                        </body>
-                                                                                                                                        </html>
+    <script src="script.js"></script>
+</body>
+</html>
