--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
 </head>
 <body>
 
-    <!-- Welcome Screen -->
-    <div id="welcome-screen">
+    <!-- Sign Up Screen -->
+    <div id="signup-screen">
+        <h2>Sign Up</h2>
+        <input type="text" id="signup-username" placeholder="Username">
+        <input type="password" id="signup-password" placeholder="Password">
+        <button onclick="signUp()">Sign Up</button>
+        <p>Already have an account? <a href="#" onclick="showSignIn()">Sign In</a></p>
+    </div>
+
+    <!-- Sign In Screen -->
+    <div id="signin-screen" class="hidden">
+        <h2>Sign In</h2>
+        <input type="text" id="signin-username" placeholder="Username">
+        <input type="password" id="signin-password" placeholder="Password">
+        <button onclick="signIn()">Sign In</button>
+        <p>Don't have an account? <a href="#" onclick="showSignUp()">Sign Up</a></p>
+    </div>
+
+    <!-- Welcome Screen (after login) -->
+    <div id="welcome-screen" class="hidden">
         <h1>Welcome to the Prophet Yusuf Quiz</h1>
         <button onclick="showLevelSelection()">Start Quiz</button>
+        <button onclick="logout()">Logout</button>
     </div>
 
     <!-- Level Selection Screen -->
