--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Welcome Screen -->
+    <!-- Welcome Screen (Initial screen) -->
     <div id="welcome-screen">
         <h1>Welcome to the Islamic Quiz!</h1>
         <button onclick="showSignUp()">Sign Up</button>
@@ -19,6 +19,9 @@
         <h2>Sign Up</h2>
         <input type="text" id="signup-username" placeholder="Username" required>
         <input type="password" id="signup-password" placeholder="Password" required>
+        <label>
+            <input type="checkbox" id="show-signup-password"> Show Password
+        </label>
         <button onclick="signUp()">Create Account</button>
         <button onclick="showSignIn()">Already have an account? Sign In</button>
     </div>
@@ -28,6 +31,9 @@
         <h2>Sign In</h2>
         <input type="text" id="signin-username" placeholder="Username" required>
         <input type="password" id="signin-password" placeholder="Password" required>
+        <label>
+            <input type="checkbox" id="show-signin-password"> Show Password
+        </label>
         <button onclick="signIn()">Sign In</button>
         <button onclick="showSignUp()">Don't have an account? Sign Up</button>
     </div>
