--- a/index.html
+++ b/index.html
@@ -7,59 +7,55 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <!-- Welcome Screen -->
     <div id="welcome-screen">
         <h1>Welcome to the Islamic Quiz App</h1>
-        <button id="start-btn">Start Quiz</button>
+        <button id="start-quiz-btn">Start Quiz</button>
     </div>
 
-    <!-- Level Screen -->
-    <div id="level-screen" class="hidden">
-        <h2>Select Difficulty Level</h2>
-        <button onclick="startQuiz('easy')">Easy</button>
-        <button onclick="startQuiz('medium')">Medium</button>
-        <button onclick="startQuiz('hard')">Hard</button>
+    <!-- Sign Up Screen -->
+    <div id="signup-screen" class="hidden">
+        <h2>Create an Account</h2>
+        <form id="signup-form">
+            <input type="text" id="signup-username" placeholder="Enter Username" required><br>
+            <input type="password" id="signup-password" placeholder="Enter Password" required><br>
+            <input type="checkbox" id="show-signup-password"> Show Password<br><br>
+            <button type="submit" id="signup-btn">Sign Up</button>
+        </form>
     </div>
 
-    <!-- Quiz Screen -->
-    <div id="quiz-screen" class="hidden">
-        <div id="question-number"></div>
-        <div id="question-text"></div>
-        <div id="options-container"></div>
-        <div id="timer">Time Left: 60s</div>
-        <button id="next-btn" class="hidden">Next Question</button>
-        <button id="prev-btn" class="hidden">Previous Question</button>
-    </div>
-
-    <!-- Results Screen -->
-    <div id="results-screen" class="hidden">
-        <h2>Your Score</h2>
-        <div id="final-score"></div>
-        <button id="restart-btn">Restart Quiz</button>
-        <button id="main-menu-btn">Main Menu</button>
-    </div>
-
-    <!-- Sign In/Sign Up -->
+    <!-- Sign In Screen -->
     <div id="signin-screen" class="hidden">
         <h2>Sign In</h2>
-        <input type="text" id="signin-username" placeholder="Username" />
-        <input type="password" id="signin-password" placeholder="Password" />
-        <button id="signin-btn">Sign In</button>
-        <button onclick="showSignup()">Go to Sign Up</button>
+        <form id="signin-form">
+            <input type="text" id="signin-username" placeholder="Enter Username" required><br>
+            <input type="password" id="signin-password" placeholder="Enter Password" required><br>
+            <input type="checkbox" id="show-signin-password"> Show Password<br><br>
+            <button type="submit" id="signin-btn">Sign In</button>
+        </form>
     </div>
 
-    <div id="signup-screen" class="hidden">
-        <h2>Sign Up</h2>
-        <input type="text" id="signup-username" placeholder="Username" />
-        <input type="password" id="signup-password" placeholder="Password" />
-        <label>
-            <input type="checkbox" id="show-password"> Show Password
-        </label>
-        <button id="signup-btn">Sign Up</button>
-        <button onclick="showSignin()">Go to Sign In</button>
+    <!-- Level Selection Page -->
+    <div id="level-screen" class="hidden">
+        <h2>Select Difficulty Level</h2>
+        <button id="easy-btn">Easy</button>
+        <button id="medium-btn">Medium</button>
+        <button id="hard-btn">Hard</button>
+    </div>
+
+    <!-- Quiz Page (after sign in) -->
+    <div id="quiz-screen" class="hidden">
+        <!-- Quiz content will go here -->
+    </div>
+
+    <!-- Results Page -->
+    <div id="results-screen" class="hidden">
+        <h2>Quiz Completed!</h2>
+        <p id="final-score"></p>
+        <button id="restart-btn">Restart Quiz</button>
+        <button id="return-btn">Return to Main Menu</button>
     </div>
 
     <script src="script.js"></script>
 </body>
-</html>
+        </html>
