--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Islamic Quiz App</title>
   <link rel="stylesheet" href="styles.css">
+  <title>Islamic Quiz App</title>
 </head>
 <body>
+
   <!-- Welcome Screen -->
   <div id="welcome-screen">
-    <h1>Welcome to the Islamic Quiz</h1>
-    <button id="start-quiz-btn">Start Quiz</button>
+    <h1>Welcome to the Islamic Quiz!</h1>
+    <button id="start-btn">Start Quiz</button>
+    <button id="sign-up-btn">Sign Up</button>
   </div>
 
   <!-- Sign Up Screen -->
   <div id="signup-screen" class="hidden">
     <h2>Sign Up</h2>
     <form id="signup-form">
-      <input type="text" id="signup-username" placeholder="Enter Username" required>
-      <input type="password" id="signup-password" placeholder="Enter Password" required>
-      <input type="checkbox" id="show-signup-password"> Show Password
-      <button type="submit" id="signup-btn">Sign Up</button>
+      <input type="text" id="signup-name" placeholder="Enter your name" required>
+      <input type="password" id="signup-password" placeholder="Enter password" required>
+      <button type="submit">Create Account</button>
+      <button type="button" id="back-to-welcome-btn">Back</button>
     </form>
   </div>
 
@@ -28,16 +30,16 @@
   <div id="signin-screen" class="hidden">
     <h2>Sign In</h2>
     <form id="signin-form">
-      <input type="text" id="signin-username" placeholder="Enter Username" required>
-      <input type="password" id="signin-password" placeholder="Enter Password" required>
-      <input type="checkbox" id="show-signin-password"> Show Password
-      <button type="submit" id="signin-btn">Sign In</button>
+      <input type="text" id="signin-name" placeholder="Enter your name" required>
+      <input type="password" id="signin-password" placeholder="Enter password" required>
+      <button type="submit">Sign In</button>
+      <button type="button" id="back-to-welcome-btn-signin">Back</button>
     </form>
   </div>
 
-  <!-- Level Screen -->
+  <!-- Level Selection Screen -->
   <div id="level-screen" class="hidden">
-    <h2>Select Difficulty Level</h2>
+    <h2>Choose a Difficulty Level</h2>
     <button id="easy-btn">Easy</button>
     <button id="medium-btn">Medium</button>
     <button id="hard-btn">Hard</button>
@@ -47,15 +49,17 @@
   <div id="quiz-screen" class="hidden">
     <h2 id="question-text"></h2>
     <div id="options-container"></div>
+    <button id="next-btn">Next</button>
   </div>
 
   <!-- Results Screen -->
   <div id="results-screen" class="hidden">
-    <h2>Your Final Score: <span id="final-score"></span></h2>
+    <h2>Quiz Finished!</h2>
+    <p id="final-score"></p>
     <button id="restart-btn">Restart Quiz</button>
-    <button id="return-btn">Return to Main Menu</button>
+    <button id="return-to-main-btn">Return to Main Menu</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
