--- a/index.html
+++ b/index.html
@@ -11,30 +11,7 @@
   <!-- Welcome Screen -->
   <div id="welcome-screen">
     <h1>Welcome to the Islamic Quiz!</h1>
-    <button id="start-btn">Start Quiz</button>
-    <button id="sign-up-btn">Sign Up</button>
-  </div>
-
-  <!-- Sign Up Screen -->
-  <div id="signup-screen" class="hidden">
-    <h2>Sign Up</h2>
-    <form id="signup-form">
-      <input type="text" id="signup-name" placeholder="Enter your name" required>
-      <input type="password" id="signup-password" placeholder="Enter password" required>
-      <button type="submit">Create Account</button>
-      <button type="button" id="back-to-welcome-btn">Back</button>
-    </form>
-  </div>
-
-  <!-- Sign In Screen -->
-  <div id="signin-screen" class="hidden">
-    <h2>Sign In</h2>
-    <form id="signin-form">
-      <input type="text" id="signin-name" placeholder="Enter your name" required>
-      <input type="password" id="signin-password" placeholder="Enter password" required>
-      <button type="submit">Sign In</button>
-      <button type="button" id="back-to-welcome-btn-signin">Back</button>
-    </form>
+    <button id="start-quiz-btn">Start Quiz</button>
   </div>
 
   <!-- Level Selection Screen -->
