--- a/index.html
+++ b/index.html
@@ -3,34 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prophet Yusuf Quiz</title>
+  <title>Prophet Yusuf Quiz App</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="welcome-screen">
-    <h1>Welcome to the Prophet Yusuf Quiz</h1>
-    <button id="start-quiz-btn">Start Quiz</button>
-  </div>
+  <div id="app">
+    <div id="welcome-screen" class="screen">
+      <h1>Welcome to the Prophet Yusuf Quiz!</h1>
+      <button onclick="startQuiz('easy')">Start Easy Quiz</button>
+      <button onclick="startQuiz('medium')">Start Medium Quiz</button>
+      <button onclick="startQuiz('hard')">Start Hard Quiz</button>
+    </div>
 
-  <div id="level-screen" class="hidden">
-    <h2>Choose Difficulty Level</h2>
-    <button id="easy-btn">Easy</button>
-    <button id="medium-btn">Medium</button>
-    <button id="hard-btn">Hard</button>
-  </div>
+    <div id="quiz-screen" class="screen">
+      <h2>Question <span id="question-number">1</span></h2>
+      <p id="question-text"></p>
+      <ul id="answers-list"></ul>
+      <p>Time Left: <span id="timer">30</span> seconds</p>
+      <button id="next-btn" onclick="nextQuestion()">Next</button>
+    </div>
 
-  <div id="quiz-screen" class="hidden">
-    <div id="timer">Time Left: <span id="time-left"></span> seconds</div>
-    <h2 id="question-text"></h2>
-    <div id="options-container"></div>
-    <button id="next-btn">Next</button>
-  </div>
-
-  <div id="results-screen" class="hidden">
-    <h2>Results</h2>
-    <p id="final-score"></p>
-    <button id="restart-btn">Restart Quiz</button>
-    <button id="return-to-main-btn">Return to Main Menu</button>
+    <div id="results-screen" class="screen">
+      <h1>Your Score: <span id="final-score"></span></h1>
+      <button onclick="restartQuiz()">Restart Quiz</button>
+      <button onclick="goToMainMenu()">Main Menu</button>
+    </div>
   </div>
 
   <script src="script.js"></script>
